samples/_failures_safe/1761563365_f246ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7085095.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_c7085095.c:135:18: error: expected ‘;’ at end of input
  135 |             found
      |                  ^
      |                  ;
./samples/SAFE/__tmp_c7085095.c:135:13: error: expected declaration or statement at end of input
  135 |             found
      |             ^~~~~
./samples/SAFE/__tmp_c7085095.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7085095.c:135:13: error: expected declaration or statement at end of input
